--- a/elements/post-page.html
+++ b/elements/post-page.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../bower_components/iron-image/iron-image.html">
 
 <dom-module id="post-page">
     <template>
@@ -21,11 +22,25 @@
           auto
           url="[[_computeURL(post)]]"
           handle-as="json"
+          loading="{{loading}}"
           last-response="{{postContent}}"></iron-ajax>
 
          <h2>[[postContent.title]]</h2>
          <p>[[postContent.intro_text]]</p>
+
+         <!--
          <img src="[[postContent.img]]" alt="[[postContent.img_alt]]" />
+         -->
+
+         <iron-image
+             style="width:900px; height:512px;"
+             placeholder="[[postContent.img_placeholder]]"
+             sizing="cover"
+             preload
+             fade
+             alt="[[postContent.img_alt]]"
+             src="[[postContent.img]]"></iron-image>
+
          <p>[[postContent.body_text]]</p>
     </template>
 
@@ -40,6 +55,12 @@
                     'type': Boolean,
                     'value': false,
                     'reflectToAttribute': true
+                },
+
+                'loading': {
+                    'type': Boolean,
+                    'value': false,
+                    'notify': true
                 }
             },
 
