Fix app-route location

--- a/elements/blog-app.html
+++ b/elements/blog-app.html
@@ -1,4 +1,4 @@
-<link rel="import" href="/bower_components/app-route/app-location.html">
+<link rel="import" href="../bower_components/app-route/app-location.html">
 <link rel="import" href="../bower_components/app-route/app-route.html">
 
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
